force-app/main/default/objects/WSM_Round_Robin_Group__c/WSM_Round_Robin_Group__c.object-meta.xml
<CustomObject>
    <description>A pool of users that assignments rotate through. Holds the assignment policy (algorithm, capacity, fallback); members and audit logs are related lists, not embedded fields.</description>
    <label>Round Robin Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>