force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Active__c.field-meta.xml
<CustomField>
    <fullName>WSM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this group accepts new assignment requests. Inactive groups return a Group Inactive result instead of assigning.</description>
    <inlineHelpText>Turn off to pause all assignments to this group without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>