force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>WSM_Algorithm__c</fullName>
    <description>Selection algorithm used to pick the next member. Strict Rotation cycles by last-assigned time. Weighted uses a member weight stride. Least Assigned picks whoever this tool has assigned the fewest times this period. Least Loaded picks whoever has the least existing work in the org, measured by the group&apos;s Load Metric capacity queries and divided by member weight; it needs at least one capacity query with a Load Metric role and falls back to Strict Rotation with a warning if there is none.</description>
    <inlineHelpText>How the next assignee is chosen among eligible members.</inlineHelpText>
    <label>Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strict Rotation</fullName>
                <default>true</default>
                <label>Strict Rotation</label>
            </value>
            <value>
                <fullName>Weighted</fullName>
            </value>
            <value>
                <fullName>Least Assigned</fullName>
            </value>
            <value>
                <fullName>Least Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>