force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Calibration__c.field-meta.xml
<CustomField>
    <fullName>WSM_Calibration__c</fullName>
    <description>How new or returning members are seeded into Least Assigned counting mid-period. Median starts them at the pool's median count to avoid a catch-up flood; None starts them at zero.</description>
    <inlineHelpText>Prevents new members from being flooded with assignments to "catch up" under Least Assigned.</inlineHelpText>
    <label>Calibration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Median</fullName>
                <default>true</default>
                <label>Median</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>