force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Capacity_Mode__c.field-meta.xml
<CustomField>
    <fullName>WSM_Capacity_Mode__c</fullName>
    <description>Whether members can be capped at a maximum number of assignments per period. None applies no capacity limit; Period Cap enforces Default Member Cap and any member-level overrides.</description>
    <inlineHelpText>Enable to stop routing to a member once they hit their per-period cap.</inlineHelpText>
    <label>Capacity Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Period Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>