force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Default_Member_Cap__c.field-meta.xml
<CustomField>
    <fullName>WSM_Default_Member_Cap__c</fullName>
    <description>Default maximum assignments per period for members in this group when Capacity Mode is Period Cap. Blank means uncapped; a member's own Cap Override takes precedence.</description>
    <inlineHelpText>Per-period assignment ceiling applied to members without their own cap override. Leave blank for uncapped.</inlineHelpText>
    <label>Default Member Cap</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>