force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Description__c.field-meta.xml
<CustomField>
    <fullName>WSM_Description__c</fullName>
    <description>Free-text notes about this group's purpose, ownership, or wiring — shown to admins, never read by the assignment engine.</description>
    <inlineHelpText>Internal notes only. Not read by the assignment engine.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>