force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>WSM_Developer_Name__c</fullName>
    <description>Stable flow-facing key for this group (e.g. sales_inbound). Referenced by the Round Robin invocable instead of the record Id so automation keeps working if the group is ever recreated.</description>
    <inlineHelpText>Used by flows and Apex to reference this group without hardcoding the record Id.</inlineHelpText>
    <label>Developer Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>