force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Fallback_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>WSM_Fallback_Queue_Id__c</fullName>
    <label>Fallback Queue Id</label>
    <description>Id of the Queue (Group of type Queue) that receives assignments when no member is eligible and no fallback user is set. Text because custom lookups to Group are not supported.</description>
    <inlineHelpText>If nobody on the team can take an assignment, it goes to this queue instead. Only works on records that queues can own, like Leads and Cases.</inlineHelpText>
    <length>18</length>
    <type>Text</type>
</CustomField>