force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Fallback_User__c.field-meta.xml
<CustomField>
    <fullName>WSM_Fallback_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who receives the assignment when no group member is eligible. If left blank, an ineligible pool returns a No Eligible Members result instead of a fallback assignment.</description>
    <inlineHelpText>Safety-net assignee used only when every member is inactive, out of office, or at capacity.</inlineHelpText>
    <label>Fallback User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Round Robin Groups (Fallback)</relationshipLabel>
    <relationshipName>Round_Robin_Groups_Fallback</relationshipName>
    <type>Lookup</type>
</CustomField>