force-app/main/default/objects/WSM_Round_Robin_Group__c/fields/WSM_Period__c.field-meta.xml
<CustomField>
    <fullName>WSM_Period__c</fullName>
    <description>Rolling window used both to reset Period Cap counts and to count assignments for Least Assigned. Weekly resets Monday; Monthly resets on the 1st, in the org's default time zone.</description>
    <inlineHelpText>Reset window for capacity caps and Least Assigned counting.</inlineHelpText>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>