force-app/main/default/objects/WSM_Round_Robin_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WSM_Developer_Name__c</columns>
    <columns>WSM_Active__c</columns>
    <columns>WSM_Algorithm__c</columns>
    <columns>WSM_Capacity_Mode__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>